refactor: new permission system
